--- a/client/public/offline.html
+++ b/client/public/offline.html
@@ -6,123 +6,112 @@
     <title>Offline - POS System</title>
     <style>
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
+            justify-content: center;
             min-height: 100vh;
-            background: linear-gradient(135deg, #e3f0ff 0%, #f9e7ff 100%);
+            background-color: #f5f5f5;
+            color: #333;
         }
         .container {
             text-align: center;
             padding: 2rem;
+            max-width: 600px;
             background: white;
             border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
-            width: 90%;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
         h1 {
-            color: #333;
+            color: #1976d2;
             margin-bottom: 1rem;
         }
         p {
-            color: #666;
-            margin-bottom: 2rem;
+            line-height: 1.6;
+            margin-bottom: 1.5rem;
         }
-        .status {
-            padding: 1rem;
-            border-radius: 4px;
+        .icon {
+            font-size: 64px;
             margin-bottom: 1rem;
-            font-weight: bold;
+            color: #1976d2;
         }
-        .offline {
-            background-color: #fff3cd;
-            color: #856404;
-        }
-        .online {
-            background-color: #d4edda;
-            color: #155724;
-        }
-        .error {
-            background-color: #f8d7da;
-            color: #721c24;
-            margin-top: 1rem;
-            padding: 0.5rem;
-            border-radius: 4px;
-            display: none;
-        }
-        button {
-            background-color: #007bff;
+        .button {
+            background-color: #1976d2;
             color: white;
             border: none;
-            padding: 0.5rem 1rem;
+            padding: 12px 24px;
             border-radius: 4px;
             cursor: pointer;
-            font-size: 1rem;
-            margin: 0.5rem;
+            font-size: 16px;
+            transition: background-color 0.3s;
         }
-        button:hover {
-            background-color: #0056b3;
+        .button:hover {
+            background-color: #1565c0;
+        }
+        .status {
+            margin-top: 1rem;
+            padding: 8px 16px;
+            border-radius: 4px;
+            background-color: #f8d7da;
+            color: #721c24;
+            display: none;
+        }
+        .status.online {
+            background-color: #d4edda;
+            color: #155724;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>POS System</h1>
-        <div id="connection-status" class="status offline">Checking connection...</div>
-        <p>You are currently offline. Some features may be limited.</p>
-        <div id="error-message" class="error"></div>
-        <button onclick="window.location.reload()">Try Again</button>
-        <button onclick="window.location.href='/'">Continue Offline</button>
+        <div class="icon">📡</div>
+        <h1>You're Offline</h1>
+        <p>
+            The POS System is currently offline. Don't worry - you can still:
+            <ul style="text-align: left;">
+                <li>View cached orders and menu items</li>
+                <li>Create new orders (they'll sync when you're back online)</li>
+                <li>Access basic cashier functions</li>
+            </ul>
+        </p>
+        <button class="button" onclick="checkConnection()">Try Again</button>
+        <div id="status" class="status"></div>
     </div>
 
     <script>
-        // Check connection status
-        function updateConnectionStatus() {
-            const statusElement = document.getElementById('connection-status');
-            const errorElement = document.getElementById('error-message');
+        function checkConnection() {
+            const statusDiv = document.getElementById('status');
             
             if (navigator.onLine) {
-                statusElement.textContent = 'Online - Redirecting...';
-                statusElement.className = 'status online';
+                statusDiv.textContent = 'You\'re back online! Redirecting...';
+                statusDiv.classList.add('online');
+                statusDiv.style.display = 'block';
+                
+                // Redirect to home page after a short delay
                 setTimeout(() => {
                     window.location.href = '/';
-                }, 2000);
+                }, 1500);
             } else {
-                statusElement.textContent = 'Offline';
-                statusElement.className = 'status offline';
+                statusDiv.textContent = 'Still offline. Please check your connection.';
+                statusDiv.classList.remove('online');
+                statusDiv.style.display = 'block';
             }
         }
 
-        // Handle network errors
-        window.addEventListener('error', (event) => {
-            if (event.target.tagName === 'SCRIPT' || event.target.tagName === 'LINK') {
-                const errorElement = document.getElementById('error-message');
-                errorElement.textContent = 'Some resources failed to load. The app may work with limited functionality.';
-                errorElement.style.display = 'block';
-            }
+        // Listen for online/offline events
+        window.addEventListener('online', () => {
+            checkConnection();
         });
 
-        // Update status on load and when connection changes
-        window.addEventListener('load', updateConnectionStatus);
-        window.addEventListener('online', updateConnectionStatus);
-        window.addEventListener('offline', updateConnectionStatus);
-
-        // Check if we have cached data
-        if ('caches' in window) {
-            caches.match('/')
-                .then(response => {
-                    if (response) {
-                        console.log('App is available offline');
-                    }
-                })
-                .catch(error => {
-                    console.error('Cache check failed:', error);
+        window.addEventListener('offline', () => {
+            const statusDiv = document.getElementById('status');
+            statusDiv.textContent = 'Connection lost. Please check your network.';
+            statusDiv.classList.remove('online');
+            statusDiv.style.display = 'block';
                 });
-        }
     </script>
 </body>
 </html> 
